# Stock

./: asdf.csv  main.py  pyproject.toml  server.py  temp.ipynb
crawl/: news.py
get_data/: get_data2.py  get_token.py
keys/: fake_keys.json  real_keys.json
site/: package-lock.json
site/src/: App.css  App.js  DataTable.js
